# Term-c

./: README.md  pyproject.toml  test.py
term_c/: __init__.py  terminal_cli.py  test.py
terminal/: test.py
