[project]
name = "term-c"
version = "1.3.0"
description = "Lib de ultilidades de terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
]

authors = [
    {name = "ErikTatsuya", email = "kirie.ayustat@gmail.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
